
2.5.10 
  b - Fixed a problem where pbs_mom will crash of check_pwd returns NULL. This could
      happen for example if LDAP was down and getpwnam returns NULL.
  b - Removed a check for Interactive jobs in qsub and the -l flag. This check
      appeared to be code that was never completed and it prevented the passing
      of resource arguments.

2.5.9
  e - change mom to only log "cannot find nvidia-smi in PATH" once when built
      with --enable-nvidia-gpus and running on a node that does not have Nvidia
      drivers installed.
  b - Change so gpu states get set/unset correctly. Fixes problems with multiple
      exclusive jobs being assigned to same gpu and where next job gets rejected
      because gpu state was not reset after last shared gpu job finished.
  e - Added a 1 millisecond sleep to src/lib/Libnet/net_client.c client_to_svr() 
      if connect fails with EADDRINTUSE EINVAL or EADDRNOTAVAIL case. For these cases
      TORQUE will retry the connect again. This fix increases the chance of success
      on the next iteration.
  b - Changes to decrease some gpu error messages and to detect unusual gpu
      drivers and configurations.
  b - Change so user cannot impersonate a different user when using munge.
  e - Added new option to torque.cfg name TRQ_IFNAME. This allows the user to designate
      a preferred outbound interface for TORQUE requests. The interface is the name 
      of the NIC interface, for example eth0.
  e - Merged revision 4588 from 3.0-fixes. This enables TORQUE to work with root squash
      enabled on nfs shares with prologue and epilogue scripts.
  b - Fixed a problem in Munge where file descriptors were getting left open after failure
      cases and the munge process.
  b - Fixed the display for physmem, availmem and totmem for the linux build. The available
      memory was incorrectly calculated and displayed.
  b - Fixed a problem where pbs_server would seg-fault if munged was not running. It would